--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.8.0",
     "lucide-react": "^0.462.0",
-    "next": "14.2.13",
+    "next": "^14.2.22",
+    "next-themes": "^0.4.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
