--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
     "@tabler/icons-react": "^3.28.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.18.1",
+    "framer-motion": "^12.4.10",
     "lucide-react": "^0.462.0",
     "next": "^14.2.22",
     "next-themes": "^0.4.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
