--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "@tabler/icons-react": "^3.28.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.4.10",
+    "framer-motion": "^12.7.4",
     "lucide-react": "^0.462.0",
+    "motion": "^12.7.4",
     "next": "^14.2.22",
     "next-themes": "^0.4.4",
     "react": "^18",
