--- a/package.json
+++ b/package.json
@@ -20,13 +20,18 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.7.4",
+    "geist": "^1.3.1",
+    "groq": "^3.86.1",
+    "groq-sdk": "^0.20.1",
     "lucide-react": "^0.462.0",
+    "marked": "^15.0.11",
     "motion": "^12.9.2",
     "next": "^14.2.22",
     "next-themes": "^0.4.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-markdown": "^10.1.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.6.0",
