--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.7.4",
     "geist": "^1.3.1",
+    "gray-matter": "^4.0.3",
     "groq": "^3.86.1",
     "groq-sdk": "^0.20.1",
     "lucide-react": "^0.462.0",
     "marked": "^15.0.11",
     "motion": "^12.9.2",
     "next": "^14.2.22",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.4",
     "react": "^18",
     "react-dom": "^18",
