--- a/package.json
+++ b/package.json
@@ -11,41 +11,46 @@
   "dependencies": {
     "@nextui-org/card": "^2.0.34",
     "@nextui-org/image": "^2.0.32",
-    "@nextui-org/react": "^2.4.8",
-    "@radix-ui/react-separator": "^1.1.0",
+    "@nextui-org/react": "^2.6.11",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.4",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-three/fiber": "^8.18.0",
+    "@react-three/postprocessing": "^2.19.1",
     "@shadcn/ui": "^0.0.4",
-    "@tabler/icons-react": "^3.28.1",
+    "@tabler/icons-react": "^3.33.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.7.4",
-    "geist": "^1.3.1",
-    "groq": "^3.86.1",
+    "framer-motion": "^12.14.0",
+    "geist": "^1.4.2",
+    "groq": "^3.89.0",
     "groq-sdk": "^0.20.1",
     "lucide-react": "^0.462.0",
-    "marked": "^15.0.11",
-    "motion": "^12.9.2",
-    "next": "^14.2.22",
-    "next-themes": "^0.4.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^5.3.0",
+    "marked": "^15.0.12",
+    "motion": "^12.14.0",
+    "next": "^14.2.29",
+    "next-themes": "^0.4.6",
+    "postprocessing": "^6.37.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.167.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^20.17.50",
+    "@types/react": "^18.3.22",
+    "@types/react-dom": "^18.3.7",
     "@types/react-slick": "^0.23.13",
-    "eslint": "^8",
+    "@types/three": "^0.176.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.13",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.3"
   }
 }
