--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.3.4",
     "@nextui-org/card": "^2.0.34",
     "@nextui-org/image": "^2.0.32",
     "@nextui-org/react": "^2.6.11",
@@ -19,16 +22,19 @@
     "@react-three/postprocessing": "^2.19.1",
     "@shadcn/ui": "^0.0.4",
     "@tabler/icons-react": "^3.33.0",
+    "@tailwindcss/typography": "^0.5.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.14.0",
     "geist": "^1.4.2",
+    "gray-matter": "^4.0.3",
     "groq": "^3.89.0",
     "groq-sdk": "^0.20.1",
     "lucide-react": "^0.462.0",
     "marked": "^15.0.12",
     "motion": "^12.19.2",
     "next": "^14.2.29",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "postprocessing": "^6.37.3",
     "react": "^18.3.1",
@@ -36,6 +42,9 @@
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-slick": "^0.30.3",
+    "rehype-prism-plus": "^2.0.1",
+    "remark-gfm": "^4.0.1",
+    "server-only": "^0.0.1",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
