--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nextui-org/card": "^2.0.34",
     "@nextui-org/image": "^2.0.32",
     "@nextui-org/react": "^2.6.11",
+    "@radix-ui/react-hover-card": "^1.1.14",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.2.7",
